# inference-gateway

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  env.example  gateway.service  gunicorn.config.py  gunicorn_asgi.config.py  inference-auth-token.py  logging_config.py  manage.py  materialized_views.sql  materialized_views_batch.sql  metrics_processing.sql  mkdocs.yml  pgbouncer.ini  pgloader.load  pyproject.toml  requirements.txt  requirements_new.txt  reset_cursor.py  schema.yml  wait-for-it.sh
.github/workflows/: deploy-docs.yml  django_tests.yml  oci-builds.yml
agpt_bulk_cli/app/: batch.py  main.py
alcf_ai/: README.md  pyproject.toml
bulk_inference/: apps.py  models.py  serializers.py  urls.py  views.py
bulk_inference/migrations/: 0001_initial.py
compute-endpoints/: README.md  common_setup.sh  launch_vllm_model.sh  llamacpp-config-template.yaml  local-vllm-endpoint.yaml  pbs-qstat-example.yaml  polaris-vllm-config-template.yaml  sophia-qdel-config-template.yaml  sophia-share-collection-template.yaml  sophia-villm-config-template-v2.0.yaml  sophia-vllm-batch-template.yaml  sophia-vllm-config-multinode-template.yaml  sophia-vllm-config-template.yaml  sophia-vllm-multinode-example.yaml  sophia-vllm-singlenode-example.yaml  sophia-vllm-toolcalling-example.yaml  sophia_env_setup_with_ray.sh  vllm-config-template.yaml  worker_init.sh
compute-endpoints/mep/: README.md  config.yaml  configs.j2  macros.j2  user_config_schema.json  user_config_template.yaml.j2  user_config_template_test.yaml.j2  user_environment.yaml
compute-endpoints/templates/: endpoint_startup_environment.sh  launch_example_gemma-4-31b-it.sh  launch_example_openai_gpt_oss_multi_endpoint.sh
compute-functions/: batch_qdel_register_function.py  genslm_esm_inference_function.py  infinity_register_function.py  llamacpp_register_function.py  llamacpp_register_function_test.py  qstat_register_function.py  share_results_function.py  vllm_batch_function.py  vllm_register_function.py  vllm_register_function_polaris.py  vllm_register_function_sophia_multiple_models.py  vllm_register_function_with_streaming.py
cron_jobs/: README.md  check_application_health.py  check_endpoints.sh  check_maintenances.py  check_maintenances.sh  create_pg_backup.sh  direct_health_monitor.py  direct_health_monitor.sh  get_endpoint_status.py  monitor_model_health.py  query_model_status.sh  refresh_materialized_views.sh  run_health_checks.sh  update_batch_status.sh
dashboard/: urls.py  views.py
dashboard/templates/: analytics.html
dashboard_async/: apps.py  globus_auth.py  settings.py  urls.py  views.py
dashboard_async/templates/: analytics.html  login.html  password_change.html  password_change_done.html  realtime.html
deploy/: dashboard_asgi.config.py  dashboard_async.service  dashboard_wsgi.config.py  gateway_asgi.config.py  gateway_async.service
deploy/docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  env.example  nginx.conf
deploy/kubernetes/: README.md
deploy/nginx/: nginx_app.conf  proxy_params
docs/: CONTRIBUTING.md  DEPLOYMENT.md  README.md  index.md  usage-guide.md
docs/admin-guide/: docker-quickstart.md  index.md  monitoring.md  setup.md
docs/reference/: api.md  citation.md  config.md
docs/user-guide/: index.md
examples/: curl-request.sh  remote_inference_gateway.ipynb
examples/load-testing/: README.md  (+10 more)
fixtures/: clusters.json  endpoints.json  federated_endpoints.json  new_endpoints.json
flows/: README.md  batch_flow.ipynb  globusconnectpersonal.service
inference_gateway/: _settings_typechecker.py  apps.py  asgi.py  cache_backend.py  log_config.py  request_context.py  settings.py  urls.py  utils.py  wsgi.py
resource_server/: apps.py  models.py  signals.py  urls.py  utils.py  views.py
resource_server_async/: api.py  apps.py  auth.py  cache.py  errors.py  globus_utils.py  httpx_client.py  logging.py  models.py  rate_limiters.py  services.py  streaming.py  urls.py  utils.py  uvicorn_workers.py  views.py
site/: 404.html  index.html  sitemap.xml
utils/: auth_utils.py  cache.py  fields.py  globus_utils.py  metis_utils.py  openai_models.py  serializer_utils.py  serializers.py
(+160 files in other folders)
