[tool.poetry]
name = "inference-gateway-backend"
version = "0.1.0"
description = ""
authors = ["Benoit Cote <bcote@anl.gov>"]
readme = "README.md"
packages = [
    { include = "resource_server" },
    { include = "resource_server_async" },
    { include = "dashboard_async" },
    { include = "utils" }
]

[tool.poetry.dependencies]
python = "^3.10"
django = "5.1.10"
globus-sdk = "^3.50.0"
globus-compute-sdk = "^3.0.1"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.2.0"
django-admin = "^2.0.2"
python-dotenv = "^1.0.0"
gunicorn = "^23.0.0"
uvicorn = "^0.30.6"
drf-spectacular = "^0.27.2"
cachetools = "^5.3.3"
typer = { extras = ["all"], version = "^0.12.3" }
django-filter = "^24.3"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
psycopg = "3.2.2"
psycopg-pool = "3.2.3"
websockets = "^13.0.1"
django-ninja = "^1.3.0"
asyncache = "^0.3.1"
globus-compute-common = "^0.5.0"
h11 = "0.16.0"
urllib3 = "2.5.0"
requests = "2.32.4"
redis = "^6.3.0"
django-redis = "^6.0.0"
hiredis = "^3.2.1"
redis = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
exclude = '\.git|\.venv|build|_build|dist'

[tool.isort]
profile = "black"
