[tool.poetry]
name = "inference-gateway-backend"
version = "0.1.0"
description = ""
authors = ["Benoit Cote <bcote@anl.gov>"]
readme = "README.md"
packages = [
    { include = "resource_server" },
    { include = "resource_server_async" },
    { include = "dashboard_async" },
    { include = "utils" }
]

[tool.poetry.dependencies]
python = "^3.12.6"
django = "^5.2.9"
globus-sdk = "^3.65.0"
globus-compute-sdk = "^3.16.1"
djangorestframework = "^3.16.1"
django-cors-headers = "^4.9.0"
python-dotenv = "^1.2.1"
gunicorn = "^23.0.0"
uvicorn = "^0.30.6"
drf-spectacular = "^0.27.2"
cachetools = "^5.5.2"
typer = { extras = ["all"], version = "^0.12.5" }
django-filter = "^24.3"
psycopg = "^3.2.12"
psycopg-pool = "^3.2.7"
websockets = "^13.1"
httpx = "^0.27.2"
django-ninja = "^1.4.5"
asyncache = "^0.3.1"
globus-compute-common = "^0.7.1"
h11 = "^0.16.0"
urllib3 = "^2.6.3"
requests = "^2.32.5"
redis = "^6.4.0"
django-redis = "^6.0.0"
hiredis = "^3.3.0"
mkdocs-material = "^9.7.0"
mkdocs-minify-plugin = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
    "resource_server/migrations/*",
    "resource_server_async/migrations/*"
]
