[project]
name = "inference-gateway-backend"
version = "0.1.0"
description = ""
authors = [{ name = "Benoit Cote", email = "bcote@anl.gov" }]
requires-python = ">=3.12.6,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "django>=5.2.9,<6",
    "globus-sdk>=3.65.0,<4",
    "globus-compute-sdk>=3.16.1,<4",
    "djangorestframework>=3.16.1,<4",
    "django-cors-headers>=4.9.0,<5",
    "python-dotenv>=1.2.1,<2",
    "gunicorn>=23.0.0,<24",
    "uvicorn>=0.30.6,<0.31",
    "drf-spectacular>=0.27.2,<0.28",
    "cachetools>=5.5.2,<6",
    "typer[all]>=0.12.5,<0.13",
    "django-filter>=24.3,<25",
    "psycopg>=3.2.12,<4",
    "psycopg-pool>=3.2.7,<4",
    "websockets>=13.1,<14",
    "httpx>=0.27.2,<0.28",
    "django-ninja>=1.4.5,<2",
    "asyncache>=0.3.1,<0.4",
    "globus-compute-common>=0.7.1,<0.8",
    "h11>=0.16.0,<0.17",
    "urllib3>=2.6.3,<3",
    "requests>=2.32.5,<3",
    "redis>=6.4.0,<7",
    "django-redis>=6.0.0,<7",
    "hiredis>=3.3.0,<4",
    "mkdocs-material>=9.7.0,<10",
    "mkdocs-minify-plugin>=0.8.0,<0.9",
]

[tool.uv.build-backend]
module-name = [
    "resource_server",
    "resource_server_async",
    "dashboard_async",
    "utils",
]
module-root = ""
namespace = true

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
    "resource_server/migrations/*",
    "resource_server_async/migrations/*"
]
